branches/0.1/src/objects/WikiPage__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PageCreatedBy__c</fullName>
        <label>PageCreatedBy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Wiki</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PageCreatedDate__c</fullName>
        <label>PageCreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <label>Parent</label>
        <referenceTo>WikiPage__c</referenceTo>
        <relationshipName>WikiPages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShortDescription__c</fullName>
        <label>ShortDescription</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipName>Wiki</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isWikiSyntax__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isWikiSyntax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>linkCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>linkCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Wiki Page</label>
    <nameField>
        <label>Wiki Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wiki</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>